# WikiRecommender

./: .gitignore  README.md  flake.nix
backend/: .env_template  graph.py  pyproject.toml  schemas.py  serve.py
frontend/: README.md  index.ts  package.json
frontend/public/: graph_switch.js  index.html  script.js  sigma_graph.js  styles.css  vis_graph.js
